# NetworkGame

./: .gitignore  .gitmodules  README  gtest_main.cpp
src/: CMakeLists.txt
src/client/: BulletClient.cpp  BulletClient.h  CMakeLists.txt  Client.cpp  Client.h  ClientMain.cpp  InputManager.cpp  NetworkManagerClient.cpp  PlayerClient.cpp  TextureManager.cpp
src/engine/: Bullet.cpp  Bullet.h  GameObject.cpp  GameObject.h  Player.cpp  Player.h  Shared_PCH.h
src/gtest/: MemoryBitStreamTestHarness.cpp  MemoryStreamTestHarness.cpp  PlayerTestHarness.cpp  gtest_main.cpp
src/maths/: Colors.h
src/networking/: NetworkingCommon.h
src/serialisation/: LinkingContext.h
src/server/: BulletServer.cpp  BulletServer.h  CMakeLists.txt  PlayerServer.cpp  PlayerServer.h  Server.cpp  ServerMain.cpp
